--- a/src/ActivityCards/Activity.css
+++ b/src/ActivityCards/Activity.css
@@ -1,7 +1,6 @@
 @media only screen and (min-width: 1000px) {
-
   .activity-div {
-    border: 1px solid #69C7BF;
+    border: 1px solid #69c7bf;
     border-radius: 6px;
     background: white;
     padding: 20px;
@@ -17,7 +16,7 @@
     font-size: 20px;
     line-height: 19px;
     font-weight: 600;
-    color: #094A59;
+    color: #094a59;
     margin-top: 5px;
   }
 
@@ -26,14 +25,13 @@
     width: fit-content;
     min-width: 60px;
     padding: 5px 12px;
-    background-color: #5C5D5E;
+    background-color: #5c5d5e;
     border-radius: 50px;
     font-weight: 600;
     font-size: 10px;
     line-height: 12px;
     color: white;
     text-align: center;
-    
   }
 
   .activity-rating-good {
@@ -41,7 +39,7 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color:#69C7BF;
+    color: #69c7bf;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -52,19 +50,18 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color: #F8B653;
+    color: #f8b653;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
   }
-
 
   .activity-rating-bad {
     position: absolute;
     right: 5%;
     top: 8%;
     margin: 0;
-    color:red;
+    color: red;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -75,38 +72,38 @@
     font-size: 13px;
     width: 300px;
     line-height: 17px;
-    color: #5C5D5E;
+    color: #5c5d5e;
   }
   .activity-deletebutton {
     z-index: 2;
-    border: solid 1px #69C7BF;
+    border: solid 1px #69c7bf;
     border-radius: 50px;
     width: 60px;
     font-weight: 300;
-    transition: .5s;
+    transition: 0.5s;
     font-size: 12px;
     margin-top: 5px;
   }
 
   .activity-deletebutton:hover {
     cursor: pointer;
-    background-color: #B80F0A;
+    background-color: #b80f0a;
     transition: 1s;
-    color: white; 
+    color: white;
     font-weight: 600;
-    border: solid 1px #B80F0A;
+    border: solid 1px #b80f0a;
   }
 
   .activity-author {
     font-size: 12px;
-    color: #094A59;
+    color: #094a59;
     margin-top: -10px;
   }
 }
 
 @media only screen and (max-width: 1000px) {
   .activity-div {
-    border: 1px solid #69C7BF;
+    border: 1px solid #69c7bf;
     border-radius: 6px;
     background: white;
     padding: 20px;
@@ -122,7 +119,7 @@
     font-size: 20px;
     line-height: 19px;
     font-weight: 600;
-    color: #094A59;
+    color: #094a59;
     margin-top: 5px;
   }
 
@@ -131,14 +128,13 @@
     width: fit-content;
     min-width: 60px;
     padding: 5px 12px;
-    background-color: #5C5D5E;
+    background-color: #5c5d5e;
     border-radius: 50px;
     font-weight: 600;
     font-size: 10px;
     line-height: 12px;
     color: white;
     text-align: center;
-    
   }
 
   .activity-rating-good {
@@ -146,7 +142,7 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color:#69C7BF;
+    color: #69c7bf;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -157,19 +153,18 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color: #F8B653;
+    color: #f8b653;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
   }
-
 
   .activity-rating-bad {
     position: absolute;
     right: 5%;
     top: 8%;
     margin: 0;
-    color:red;
+    color: red;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -180,38 +175,38 @@
     font-size: 13px;
     width: 300px;
     line-height: 17px;
-    color: #5C5D5E;
+    color: #5c5d5e;
   }
   .activity-deletebutton {
     z-index: 2;
-    border: solid 1px #69C7BF;
+    border: solid 1px #69c7bf;
     border-radius: 50px;
     width: 60px;
     font-weight: 300;
-    transition: .5s;
+    transition: 0.5s;
     font-size: 12px;
     margin-top: 5px;
   }
 
   .activity-deletebutton:hover {
     cursor: pointer;
-    background-color: #B80F0A;
+    background-color: #b80f0a;
     transition: 1s;
-    color: white; 
+    color: white;
     font-weight: 600;
-    border: solid 1px #B80F0A;
+    border: solid 1px #b80f0a;
   }
 
   .activity-author {
     font-size: 12px;
-    color: #094A59;
+    color: #094a59;
     margin-top: -10px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .activity-div {
-    border: 1px solid #69C7BF;
+    border: 1px solid #69c7bf;
     border-radius: 6px;
     background: white;
     padding: 20px;
@@ -230,9 +225,8 @@
     font-size: 20px;
     line-height: 19px;
     font-weight: 600;
-    color: #094A59;
+    color: #094a59;
     margin-top: 0px;
-
   }
 
   .activity-genre {
@@ -240,7 +234,7 @@
     width: fit-content;
     min-width: 60px;
     padding: 5px 12px;
-    background-color: #5C5D5E;
+    background-color: #5c5d5e;
     border-radius: 50px;
     font-weight: 600;
     font-size: 10px;
@@ -248,7 +242,6 @@
     color: white;
     text-align: center;
     margin-top: 10px;
-    
   }
 
   .activity-rating-good {
@@ -256,7 +249,7 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color:#69C7BF;
+    color: #69c7bf;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -267,19 +260,18 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color: #F8B653;
+    color: #f8b653;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
   }
-
 
   .activity-rating-bad {
     position: absolute;
     right: 5%;
     top: 8%;
     margin: 0;
-    color:red;
+    color: red;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -290,39 +282,38 @@
     font-size: 13px;
     width: 300px;
     line-height: 17px;
-    color: #5C5D5E;
+    color: #5c5d5e;
     margin-top: 10px;
   }
   .activity-deletebutton {
     z-index: 2;
-    border: solid 1px #69C7BF;
+    border: solid 1px #69c7bf;
     border-radius: 50px;
     width: 60px;
     font-weight: 300;
-    transition: .5s;
+    transition: 0.5s;
     font-size: 12px;
     margin-top: 10px;
   }
 
   .activity-deletebutton:hover {
     cursor: pointer;
-    background-color: #B80F0A;
+    background-color: #b80f0a;
     transition: 1s;
-    color: white; 
+    color: white;
     font-weight: 600;
-    border: solid 1px #B80F0A;
+    border: solid 1px #b80f0a;
   }
 
   .activity-author {
     font-size: 12px;
-    color: #094A59;
+    color: #094a59;
     margin-top: 5px;
   }
 }
 @media only screen and (max-width: 600px) {
-
   .activity-div {
-    border: 1px solid #69C7BF;
+    border: 1px solid #69c7bf;
     border-radius: 6px;
     background: white;
     padding: 20px;
@@ -341,9 +332,8 @@
     font-size: 20px;
     line-height: 19px;
     font-weight: 600;
-    color: #094A59;
+    color: #094a59;
     margin-top: 0px;
-
   }
 
   .activity-genre {
@@ -351,7 +341,7 @@
     width: fit-content;
     min-width: 60px;
     padding: 5px 12px;
-    background-color: #5C5D5E;
+    background-color: #5c5d5e;
     border-radius: 50px;
     font-weight: 600;
     font-size: 10px;
@@ -359,7 +349,6 @@
     color: white;
     text-align: center;
     margin-top: 10px;
-    
   }
 
   .activity-rating-good {
@@ -367,7 +356,7 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color:#69C7BF;
+    color: #69c7bf;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -378,19 +367,18 @@
     right: 5%;
     top: 8%;
     margin: 0;
-    color: #F8B653;
+    color: #f8b653;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
   }
-
 
   .activity-rating-bad {
     position: absolute;
     right: 5%;
     top: 8%;
     margin: 0;
-    color:red;
+    color: red;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -401,32 +389,32 @@
     font-size: 13px;
     width: 300px;
     line-height: 17px;
-    color: #5C5D5E;
+    color: #5c5d5e;
     margin-top: 10px;
   }
   .activity-deletebutton {
     z-index: 2;
-    border: solid 1px #69C7BF;
+    border: solid 1px #69c7bf;
     border-radius: 50px;
     width: 60px;
     font-weight: 300;
-    transition: .5s;
+    transition: 0.5s;
     font-size: 12px;
     margin-top: 10px;
   }
 
   .activity-deletebutton:hover {
     cursor: pointer;
-    background-color: #B80F0A;
+    background-color: #b80f0a;
     transition: 1s;
-    color: white; 
+    color: white;
     font-weight: 600;
-    border: solid 1px #B80F0A;
+    border: solid 1px #b80f0a;
   }
 
   .activity-author {
     font-size: 12px;
-    color: #094A59;
+    color: #094a59;
     margin-top: 5px;
   }
 }
