--- a/src/Dashboards/MainDashboard/Modals/addmodal.css
+++ b/src/Dashboards/MainDashboard/Modals/addmodal.css
@@ -7,22 +7,21 @@
     transform: translate(-50%, 0%);
     width: 450px;
     height: 310px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 50px
-      rgba(0,0,0,0.2);
+    background: #ffffff;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     z-index: 1;
   }
-  
+
   .add-instructions {
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
     text-align: center;
-    color: #5C5D5E;
+    color: #5c5d5e;
     margin-top: 75px;
   }
-  
+
   .addmodal-button-container {
     display: flex;
     width: 300px;
@@ -33,40 +32,40 @@
     transform: translate(-50%, 0);
     top: 15px;
   }
-  
+
   .addmodal-buttons {
     width: 135px;
     height: 44px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 9px;
     font-weight: 600;
-    border: 1px solid #69C7BF;
-    color: #094A59;
+    border: 1px solid #69c7bf;
+    color: #094a59;
     font-size: 15px;
     line-height: 18px;
     text-align: center;
     margin: 7px;
-    transition: .5s;
+    transition: 0.5s;
   }
-  
+
   .addmodal-buttons:hover {
     cursor: pointer;
-    background-color: #69C7BF;
-    transition: .5s;
-    color: #FFFFFF;
+    background-color: #69c7bf;
+    transition: 0.5s;
+    color: #ffffff;
   }
-  
+
   .cancel-add {
-    color: #69C7BF;
+    color: #69c7bf;
     text-align: center;
     margin-top: 45px;
-    transition: .3s;
+    transition: 0.3s;
   }
-  
+
   .cancel-add:hover {
     cursor: pointer;
     color: black;
-    transition: .5s;
+    transition: 0.5s;
   }
 }
 
@@ -79,22 +78,21 @@
     transform: translate(-50%, 0%);
     width: 450px;
     height: 310px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 50px
-      rgba(0,0,0,0.2);
+    background: #ffffff;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     z-index: 1;
   }
-  
+
   .add-instructions {
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
     text-align: center;
-    color: #5C5D5E;
+    color: #5c5d5e;
     margin-top: 75px;
   }
-  
+
   .addmodal-button-container {
     display: flex;
     width: 300px;
@@ -105,40 +103,40 @@
     transform: translate(-50%, 0);
     top: 15px;
   }
-  
+
   .addmodal-buttons {
     width: 135px;
     height: 44px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 9px;
     font-weight: 600;
-    border: 1px solid #69C7BF;
-    color: #094A59;
+    border: 1px solid #69c7bf;
+    color: #094a59;
     font-size: 15px;
     line-height: 18px;
     text-align: center;
     margin: 7px;
-    transition: .5s;
+    transition: 0.5s;
   }
-  
+
   .addmodal-buttons:hover {
     cursor: pointer;
-    background-color: #69C7BF;
-    transition: .5s;
-    color: #FFFFFF;
+    background-color: #69c7bf;
+    transition: 0.5s;
+    color: #ffffff;
   }
-  
+
   .cancel-add {
-    color: #69C7BF;
+    color: #69c7bf;
     text-align: center;
     margin-top: 45px;
-    transition: .3s;
+    transition: 0.3s;
   }
-  
+
   .cancel-add:hover {
     cursor: pointer;
     color: black;
-    transition: .5s;
+    transition: 0.5s;
   }
 }
 
@@ -149,9 +147,8 @@
     transform: translate(-50%, 0%);
     width: 380px;
     height: 280px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 50px
-      rgba(0,0,0,0.2);
+    background: #ffffff;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     z-index: 1;
     top: 35%;
@@ -159,7 +156,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
   }
 
   .add-instructions {
@@ -167,7 +163,7 @@
     font-size: 13px;
     line-height: 15px;
     text-align: center;
-    color: #5C5D5E;
+    color: #5c5d5e;
     margin-top: 15px;
   }
 
@@ -182,37 +178,37 @@
   .addmodal-buttons {
     width: 150px;
     height: 50px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 9px;
     font-weight: 600;
-    border: 1px solid #69C7BF;
-    color: #094A59;
+    border: 1px solid #69c7bf;
+    color: #094a59;
     font-size: 15px;
     line-height: 18px;
     text-align: center;
     margin: 5px;
-    transition: .5s;
+    transition: 0.5s;
   }
 
   .addmodal-buttons:hover {
     cursor: pointer;
-    background-color: #69C7BF;
-    transition: .5s;
-    color: #FFFFFF;
+    background-color: #69c7bf;
+    transition: 0.5s;
+    color: #ffffff;
   }
 
   .cancel-add {
-    color: #69C7BF;
+    color: #69c7bf;
     text-align: center;
     margin-top: 25px;
-    transition: .3s;
+    transition: 0.3s;
     margin-bottom: -10px;
   }
 
   .cancel-add:hover {
     cursor: pointer;
     color: black;
-    transition: .5s;
+    transition: 0.5s;
   }
 }
 
@@ -223,9 +219,8 @@
     transform: translate(-50%, 0%);
     width: 320px;
     height: 220px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 50px
-      rgba(0,0,0,0.2);
+    background: #ffffff;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     z-index: 1;
     top: 25%;
@@ -233,7 +228,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
   }
 
   .add-instructions {
@@ -241,7 +235,7 @@
     font-size: 13px;
     line-height: 15px;
     text-align: center;
-    color: #5C5D5E;
+    color: #5c5d5e;
   }
 
   .addmodal-button-container {
@@ -255,36 +249,36 @@
   .addmodal-buttons {
     width: 120px;
     height: 40px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 9px;
     font-weight: 600;
-    border: 1px solid #69C7BF;
-    color: #094A59;
+    border: 1px solid #69c7bf;
+    color: #094a59;
     font-size: 15px;
     line-height: 18px;
     text-align: center;
     margin: 4px;
-    transition: .5s;
+    transition: 0.5s;
   }
 
   .addmodal-buttons:hover {
     cursor: pointer;
-    background-color: #69C7BF;
-    transition: .5s;
-    color: #FFFFFF;
+    background-color: #69c7bf;
+    transition: 0.5s;
+    color: #ffffff;
   }
 
   .cancel-add {
-    color: #69C7BF;
+    color: #69c7bf;
     text-align: center;
     margin-top: 15px;
-    transition: .3s;
+    transition: 0.3s;
     margin-bottom: -10px;
   }
 
   .cancel-add:hover {
     cursor: pointer;
     color: black;
-    transition: .5s;
+    transition: 0.5s;
   }
 }
