--- a/src/Dashboards/activitydash.css
+++ b/src/Dashboards/activitydash.css
@@ -28,14 +28,13 @@
     margin-top: 200px; /* change to 200px */
     align-items: center;
     justify-content: flex-start;
-
   }
 
   .activity-dash h1 {
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
-    color: #094A59;
+    color: #094a59;
     margin-left: -200px;
   }
 
@@ -52,14 +51,14 @@
     color: black;
   }
 
-  .activity-add-button{
+  .activity-add-button {
     width: 25px;
     height: 25px;
-    border: 1px solid #69C7BF;
+    border: 1px solid #69c7bf;
     border-radius: 50%;
     box-sizing: border-box;
     background-color: white;
-    color: #69C7BF;
+    color: #69c7bf;
     font-size: 17px;
     text-align: center;
     margin-left: 50px;
@@ -67,10 +66,10 @@
   }
 
   .activity-add-button:hover {
-    background-color: #69C7BF;
-    color: #FFFFFF;
+    background-color: #69c7bf;
+    color: #ffffff;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
   }
 
   .activity-results {
@@ -139,12 +138,11 @@
     justify-content: flex-start;
   }
 
-
   .activity-dash h1 {
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
-    color: #094A59;
+    color: #094a59;
     margin-left: -150px;
   }
   .add-text {
@@ -161,14 +159,14 @@
     color: black;
   }
 
-  .activity-add-button{
+  .activity-add-button {
     width: 18px;
     height: 18px;
-    border: 1px solid #69C7BF;
+    border: 1px solid #69c7bf;
     border-radius: 50%;
     box-sizing: border-box;
     background-color: white;
-    color: #69C7BF;
+    color: #69c7bf;
     font-size: 14px;
     padding-bottom: 2px;
     padding-right: 0.5px;
@@ -178,10 +176,10 @@
   }
 
   .activity-add-button:hover {
-    background-color: #69C7BF;
-    color: #FFFFFF;
+    background-color: #69c7bf;
+    color: #ffffff;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
   }
 
   .randomdiv {
@@ -241,12 +239,11 @@
     justify-content: flex-start;
   }
 
-
   .activity-dash h1 {
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
-    color: #094A59;
+    color: #094a59;
     margin-left: 0;
   }
   .add-text {
@@ -263,14 +260,14 @@
     color: black;
   }
 
-  .activity-add-button{
+  .activity-add-button {
     width: 18px;
     height: 18px;
-    border: 1px solid #69C7BF;
+    border: 1px solid #69c7bf;
     border-radius: 50%;
     box-sizing: border-box;
     background-color: white;
-    color: #69C7BF;
+    color: #69c7bf;
     font-size: 14px;
     padding-bottom: 2px;
     padding-right: 0.5px;
@@ -280,10 +277,10 @@
   }
 
   .activity-add-button:hover {
-    background-color: #69C7BF;
-    color: #FFFFFF;
+    background-color: #69c7bf;
+    color: #ffffff;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
   }
 
   .randomdiv {
@@ -300,4 +297,3 @@
     background-color: white;
   }
 }
-
