--- a/src/LandingPage/HowToUse/howtouse.css
+++ b/src/LandingPage/HowToUse/howtouse.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border: 5px solid #69C7BF;
+    border: 5px solid #69c7bf;
     padding: 10px;
     z-index: 5;
   }
@@ -28,7 +28,7 @@
     font-size: 15px;
   }
 
-  #close-button  {
+  #close-button {
     z-index: -1;
     position: absolute;
     width: 50px;
@@ -41,7 +41,7 @@
     line-height: 21px;
     text-align: center;
     text-decoration: none;
-    color: #69C7BF;
+    color: #69c7bf;
   }
 
   #close-button:hover {
@@ -64,7 +64,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border: 5px solid #69C7BF;
+    border: 5px solid #69c7bf;
     padding: 10px;
     z-index: 5;
   }
@@ -81,7 +81,7 @@
     font-size: 15px;
   }
 
-  #close-button  {
+  #close-button {
     z-index: -1;
     position: absolute;
     width: 50px;
@@ -94,7 +94,7 @@
     line-height: 21px;
     text-align: center;
     text-decoration: none;
-    color: #69C7BF;
+    color: #69c7bf;
     bottom: 20px;
   }
 
@@ -118,7 +118,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border: 5px solid #69C7BF;
+    border: 5px solid #69c7bf;
     padding: 10px;
   }
 
@@ -134,7 +134,7 @@
     font-size: 15px;
   }
 
-  #close-button  {
+  #close-button {
     z-index: -1;
     position: absolute;
     width: 50px;
@@ -147,7 +147,7 @@
     line-height: 21px;
     text-align: center;
     text-decoration: none;
-    color: #69C7BF;
+    color: #69c7bf;
   }
 
   #close-button:hover {
