--- a/src/LandingPage/LogIn/login.css
+++ b/src/LandingPage/LogIn/login.css
@@ -1,5 +1,4 @@
 @media only screen and (max-width: 599px) {
-
   .login-modal {
     position: absolute;
     width: 325px;
@@ -8,15 +7,14 @@
     transform: translate(-50%, 0%);
     top: 29%;
     z-index: 100;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 50px 
-      rgba(0,0,0,0.2);
+    background: #ffffff;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     display: flex;
     flex-direction: column;
   }
 
-  .demo-creds-div { 
+  .demo-creds-div {
     margin-bottom: 50px;
     margin-top: 35px;
   }
@@ -45,12 +43,12 @@
     margin-bottom: 10px;
     margin-left: 35px;
     padding: 2px;
-    border: 1px solid #E5E5E5;
+    border: 1px solid #e5e5e5;
     border-radius: 6px;
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
     padding-left: 10px;
   }
 
@@ -72,9 +70,8 @@
     left: 50%;
     transform: translate(-50%, 0%);
     top: 63%;
-    background: #69C7BF;
-    box-shadow: 0px 4px 20px
-      rgba(26, 26, 26, 0.2);
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -82,13 +79,13 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: #FFFFFF;
-    transition: .5s;
+    color: #ffffff;
+    transition: 0.5s;
   }
 
   .login-button-large:hover {
     cursor: pointer;
-    background-color:rgb(82, 156, 150);
+    background-color: rgb(82, 156, 150);
     transition: 1s;
   }
 
@@ -99,9 +96,8 @@
     left: 50%;
     transform: translate(-50%, 0%);
     top: 5%;
-    background: #69C7BF;
-    box-shadow: 0px 4px 20px
-      rgba(26, 26, 26, 0.2);
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -109,8 +105,8 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: #FFFFFF;
-    transition: .5s;
+    color: #ffffff;
+    transition: 0.5s;
   }
 
   .cancel-login {
@@ -126,13 +122,13 @@
     line-height: 21px;
     text-align: center;
     text-decoration: none;
-    color: #69C7BF;
+    color: #69c7bf;
     transition: 1s;
   }
 
   .cancel-login:hover {
     cursor: pointer;
-    color:rgb(82, 156, 150);
+    color: rgb(82, 156, 150);
     transition: 1s;
   }
 
@@ -145,7 +141,7 @@
   }
 
   .error-creds {
-    display:none;
+    display: none;
   }
   .error-form {
     display: flex;
@@ -163,12 +159,12 @@
     margin-bottom: 10px;
     margin-left: 35px;
     padding: 2px;
-    border: 1px solid #E5E5E5;
+    border: 1px solid #e5e5e5;
     border-radius: 6px;
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
     padding-left: 10px;
     border: 1px solid red;
   }
@@ -195,9 +191,8 @@
     transform: translate(-50%, 0%);
     top: 30%;
     z-index: 100;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 50px 
-      rgba(0,0,0,0.2);
+    background: #ffffff;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
   }
   .demo-creds {
@@ -228,12 +223,12 @@
     right: 50%;
     transform: translate(-50%, 0%);
     padding: 2px;
-    border: 1px solid #E5E5E5;
+    border: 1px solid #e5e5e5;
     border-radius: 6px;
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
     padding-left: 10px;
   }
 
@@ -257,9 +252,8 @@
     right: 50%;
     transform: translate(-50%, 0%);
     top: 72%;
-    background: #69C7BF;
-    box-shadow: 0px 4px 20px
-      rgba(26, 26, 26, 0.2);
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -267,13 +261,13 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: #FFFFFF;
-    transition: .5s;
+    color: #ffffff;
+    transition: 0.5s;
   }
 
   .login-button-large:hover {
     cursor: pointer;
-    background-color:rgb(82, 156, 150);
+    background-color: rgb(82, 156, 150);
     transition: 1s;
   }
   .login-button-small {
@@ -283,9 +277,8 @@
     left: 50%;
     transform: translate(-50%, 0%);
     top: 5%;
-    background: #69C7BF;
-    box-shadow: 0px 4px 20px
-      rgba(26, 26, 26, 0.2);
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -293,8 +286,8 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: #FFFFFF;
-    transition: .5s;
+    color: #ffffff;
+    transition: 0.5s;
   }
 
   .cancel-login {
@@ -311,13 +304,13 @@
     line-height: 21px;
     text-align: center;
     text-decoration: none;
-    color: #69C7BF;
+    color: #69c7bf;
     transition: 1s;
   }
 
   .cancel-login:hover {
     cursor: pointer;
-    color:rgb(82, 156, 150);
+    color: rgb(82, 156, 150);
     transition: 1s;
   }
 
@@ -356,7 +349,7 @@
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
     padding-left: 10px;
     border: 1px solid red;
   }
