--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -8,7 +8,7 @@
   html {
     height: 100%;
   }
-  body { 
+  body {
     height: 100%;
   }
   #root {
@@ -47,9 +47,8 @@
   .signup-button {
     width: 200px;
     height: 50px;
-    background: #69C7BF;
-    box-shadow: 0px 4px 20px
-      rgba(26, 26, 26, 0.2);
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -57,21 +56,20 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: #FFFFFF;
-    transition: .5s;
+    color: #ffffff;
+    transition: 0.5s;
   }
 
   .signup-button:hover {
     cursor: pointer;
-    background-color:rgb(82, 156, 150);
+    background-color: rgb(82, 156, 150);
     transition: 1s;
   }
   .howtouse-button {
     width: 200px;
     height: 50px;
-    background: #69C7BF;
-    box-shadow: 0px 4px 20px
-      rgba(26, 26, 26, 0.2);
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -79,15 +77,15 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: #FFFFFF;
-    transition: .5s;
+    color: #ffffff;
+    transition: 0.5s;
     margin-top: -30px;
- }
- .howtouse-button:hover {
-   cursor: pointer;
-   background-color:rgb(82, 156, 150);
-   transition: 1s;
- }
+  }
+  .howtouse-button:hover {
+    cursor: pointer;
+    background-color: rgb(82, 156, 150);
+    transition: 1s;
+  }
 
   .login-button {
     z-index: 1;
@@ -98,12 +96,12 @@
     line-height: 21px;
     text-align: center;
     text-decoration: none;
-    color: #69C7BF;
-    transition: .5s;
+    color: #69c7bf;
+    transition: 0.5s;
   }
   .login-button:hover {
     cursor: pointer;
-    color:rgb(82, 156, 150);
+    color: rgb(82, 156, 150);
     transition: 1s;
   }
 }
@@ -117,7 +115,7 @@
   html {
     height: 100%;
   }
-  body { 
+  body {
     height: 100%;
   }
   #root {
@@ -151,9 +149,8 @@
   .signup-button {
     width: 200px;
     height: 50px;
-    background: #69C7BF;
-    box-shadow: 0px 4px 20px
-      rgba(26, 26, 26, 0.2);
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
@@ -161,35 +158,34 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
-    color: #FFFFFF;
-    transition: .5s;
+    color: #ffffff;
+    transition: 0.5s;
   }
   .signup-button:hover {
     cursor: pointer;
-    background-color:rgb(82, 156, 150);
+    background-color: rgb(82, 156, 150);
     transition: 1s;
   }
 
   .howtouse-button {
-     width: 200px;
-     height: 50px;
-     background: #69C7BF;
-     box-shadow: 0px 4px 20px
-       rgba(26, 26, 26, 0.2);
-     border-radius: 50px;
-     font-family: 'Work Sans', sans-serif;
-     font-style: normal;
-     font-weight: 600;
-     font-size: 18px;
-     line-height: 21px;
-     text-align: center;
-     color: #FFFFFF;
-     transition: .5s;
-     margin-top: -30px;
+    width: 200px;
+    height: 50px;
+    background: #69c7bf;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #ffffff;
+    transition: 0.5s;
+    margin-top: -30px;
   }
   .howtouse-button:hover {
     cursor: pointer;
-    background-color:rgb(82, 156, 150);
+    background-color: rgb(82, 156, 150);
     transition: 1s;
   }
 
@@ -202,12 +198,12 @@
     line-height: 21px;
     text-align: center;
     text-decoration: none;
-    color: #69C7BF;
-    transition: .5s;
+    color: #69c7bf;
+    transition: 0.5s;
   }
   .login-button:hover {
     cursor: pointer;
-    color:rgb(82, 156, 150);
+    color: rgb(82, 156, 150);
     transition: 1s;
   }
 }
