--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 768px) {
   .navbar {
-    background-color: #69C7BF;
+    background-color: #69c7bf;
     height: 160px;
     width: 100%;
     position: fixed;
@@ -33,8 +33,8 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 23px;
-    color:#FFFFFF;
-    transition: .4s; 
+    color: #ffffff;
+    transition: 0.4s;
     position: relative;
     right: 85%;
   }
@@ -60,7 +60,7 @@
 
 @media only screen and (max-width: 768px) {
   .navbar {
-    background-color: #69C7BF;
+    background-color: #69c7bf;
     height: 130px;
     width: inherit;
     position: absolute;
@@ -94,8 +94,8 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 23px;
-    color:#FFFFFF;
-    transition: .4s; 
+    color: #ffffff;
+    transition: 0.4s;
     position: relative;
     right: 85%;
     display: none;
@@ -123,7 +123,7 @@
 
 @media only screen and (max-width: 599px) {
   .navbar {
-    background-color: #69C7BF;
+    background-color: #69c7bf;
     height: 130px;
     width: inherit;
     position: absolute;
@@ -157,8 +157,8 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 23px;
-    color:#FFFFFF;
-    transition: .4s; 
+    color: #ffffff;
+    transition: 0.4s;
     position: relative;
     right: 85%;
     display: none;
@@ -183,4 +183,3 @@
     top: 33%;
   }
 }
-
