--- a/src/Navbar/footer.css
+++ b/src/Navbar/footer.css
@@ -1,4 +1,3 @@
-
 @media only screen and (min-width: 768px) {
   .footer {
     display: none;
@@ -21,16 +20,14 @@
     height: 100%;
     font-size: 16px;
     margin: -1px;
-    border-top: 2px solid #094A59;;
-    border-right: 1px solid #094A59;
-    background-color: #FFFFFF;
-    color: #094A59;
+    border-top: 2px solid #094a59;
+    border-right: 1px solid #094a59;
+    background-color: #ffffff;
+    color: #094a59;
     font-weight: 600;
   }
   .footer-buttons:hover {
     cursor: pointer;
-    background-color: #69C7BF;
+    background-color: #69c7bf;
   }
-
-
 }
