--- a/src/settings.css
+++ b/src/settings.css
@@ -26,7 +26,7 @@
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
-    color: #094A59;
+    color: #094a59;
     text-align: center;
     margin-top: 200px;
   }
@@ -47,8 +47,8 @@
   }
 
   .settings-form input {
-    background: #FFFFFF;
-    border: 1px solid #E5E5E5;
+    background: #ffffff;
+    border: 1px solid #e5e5e5;
     box-sizing: border-box;
     border-radius: 6px;
     width: 425px;
@@ -57,7 +57,7 @@
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
   }
 
   .settings-form label {
@@ -67,11 +67,11 @@
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
-    color: #094A59;
+    color: #094a59;
   }
 
   .settings-submit-button {
-    background: #69C7BF;
+    background: #69c7bf;
     border-radius: 50px;
     width: 130px;
     height: 35px;
@@ -80,7 +80,7 @@
     text-align: center;
     margin-top: 40px;
     color: white;
-    transition: .7s;
+    transition: 0.7s;
   }
 
   .settings-submit-button:hover {
@@ -208,7 +208,7 @@
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
-    color: #094A59;
+    color: #094a59;
     margin-top: 190px;
     margin-left: 20px;
   }
@@ -216,7 +216,7 @@
     font-weight: 300;
     font-size: 13px;
     width: 300px;
-    text-align:center;
+    text-align: center;
     margin-top: 20px;
   }
 
@@ -230,8 +230,8 @@
   }
 
   .settings-form input {
-    background: #FFFFFF;
-    border: 1px solid #E5E5E5;
+    background: #ffffff;
+    border: 1px solid #e5e5e5;
     box-sizing: border-box;
     border-radius: 6px;
     width: 280px;
@@ -241,7 +241,7 @@
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
   }
 
   .settings-form label {
@@ -251,11 +251,11 @@
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
-    color: #094A59;
+    color: #094a59;
   }
 
   .settings-submit-button {
-    background: #69C7BF;
+    background: #69c7bf;
     border-radius: 50px;
     width: 130px;
     height: 35px;
@@ -264,7 +264,7 @@
     text-align: center;
     margin-top: 20px;
     color: white;
-    transition: .7s;
+    transition: 0.7s;
   }
 
   .settings-submit-button:hover {
@@ -300,7 +300,7 @@
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
-    color: #094A59;
+    color: #094a59;
     margin-top: 150px;
     margin-left: 20px;
   }
@@ -308,7 +308,7 @@
     font-weight: 300;
     font-size: 13px;
     width: 300px;
-    text-align:center;
+    text-align: center;
     margin-top: 20px;
   }
 
@@ -322,8 +322,8 @@
   }
 
   .settings-form input {
-    background: #FFFFFF;
-    border: 1px solid #E5E5E5;
+    background: #ffffff;
+    border: 1px solid #e5e5e5;
     box-sizing: border-box;
     border-radius: 6px;
     width: 280px;
@@ -333,7 +333,7 @@
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
   }
 
   .settings-form label {
@@ -343,11 +343,11 @@
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
-    color: #094A59;
+    color: #094a59;
   }
 
   .settings-submit-button {
-    background: #69C7BF;
+    background: #69c7bf;
     border-radius: 50px;
     width: 130px;
     height: 35px;
@@ -356,7 +356,7 @@
     text-align: center;
     margin-top: 20px;
     color: white;
-    transition: .7s;
+    transition: 0.7s;
   }
 
   .settings-submit-button:hover {
@@ -366,7 +366,6 @@
   }
 }
 @media only screen and (max-width: 600px) {
-
   body {
     width: 100%;
     height: 100%;
@@ -392,7 +391,7 @@
     font-weight: 600;
     font-size: 30px;
     line-height: 35px;
-    color: #094A59;
+    color: #094a59;
     margin-top: 150px;
     margin-left: 20px;
   }
@@ -400,7 +399,7 @@
     font-weight: 300;
     font-size: 13px;
     width: 300px;
-    text-align:center;
+    text-align: center;
     margin-top: 20px;
   }
 
@@ -414,8 +413,8 @@
   }
 
   .settings-form input {
-    background: #FFFFFF;
-    border: 1px solid #E5E5E5;
+    background: #ffffff;
+    border: 1px solid #e5e5e5;
     box-sizing: border-box;
     border-radius: 6px;
     width: 280px;
@@ -425,7 +424,7 @@
     font-weight: 300;
     font-size: 13px;
     line-height: 15px;
-    color: #5C5D5E;
+    color: #5c5d5e;
   }
 
   .settings-form label {
@@ -435,11 +434,11 @@
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
-    color: #094A59;
+    color: #094a59;
   }
 
   .settings-submit-button {
-    background: #69C7BF;
+    background: #69c7bf;
     border-radius: 50px;
     width: 130px;
     height: 35px;
@@ -448,7 +447,7 @@
     text-align: center;
     margin-top: 20px;
     color: white;
-    transition: .7s;
+    transition: 0.7s;
   }
 
   .settings-submit-button:hover {
