Finished High priority design audits

--- a/src/LandingPage/SignUp/signUp.css
+++ b/src/LandingPage/SignUp/signUp.css
@@ -209,10 +209,11 @@
     position: absolute;
     top: 14%;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-evenly;
     height: 500px;
     width: 450px;
+    padding-left: 10%;
     z-index: -1;
   }
 
@@ -234,8 +235,21 @@
     font-size: 15px;
     line-height: 18px;
     width: 150px;
+    margin-left: 10px;
+    color: #094a59;
     height: 18px;
-    text-align: center;
+  }
+  .sign-up-buttons {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    height: fit-content;
+    padding: 5px;
+    flex-direction: column;
+    align-items: center;
+    margin-left: -20px;
+    justify-content: space-between;
   }
 
   .signup-modal #signup-form .signup-button {
@@ -252,7 +266,8 @@
     text-align: center;
     text-decoration: none;
     color: #69c7bf;
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   .cancel:hover {
