--- a/src/LandingPage/HowToUse/howtouse.css
+++ b/src/LandingPage/HowToUse/howtouse.css
@@ -2,30 +2,38 @@
   .howtouse-modal {
     position: absolute;
     width: 80%;
-    height: 75%;
+    border-radius: 7px;
+    height: 67%;
     background-color: white;
     left: 50%;
-    top: 15%;
+    top: 20%;
     transform: translate(-50%);
     display: flex;
+    z-index: 10;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    border: 5px solid #69c7bf;
-    padding: 10px;
-    z-index: 5;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 50px;
+    color: #5c5d5e;
   }
 
   .howtouse-modal h1 {
-    font-size: 20px;
+    font-size: 13px;
+    margin-top: 10%;
   }
 
   .howtouse-modal h2 {
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: bold;
+    margin-top: 25px;
   }
 
   .howtouse-modal p {
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: 300;
+    margin-top: 5px;
+    margin-bottom: 8px;
   }
 
   #close-button {
@@ -40,6 +48,7 @@
     font-weight: 600;
     line-height: 21px;
     text-align: center;
+    margin-top: 10px;
     text-decoration: none;
     color: #69c7bf;
   }
@@ -54,31 +63,38 @@
 @media only screen and (min-width: 700px) {
   .howtouse-modal {
     position: absolute;
-    width: 80%;
-    height: 73%;
+    width: 60%;
+    border-radius: 7px;
+    height: 63%;
     background-color: white;
     left: 50%;
-    top: 15%;
+    top: 20%;
     transform: translate(-50%);
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    border: 5px solid #69c7bf;
-    padding: 10px;
-    z-index: 5;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 50px;
+    color: #5c5d5e;
   }
 
   .howtouse-modal h1 {
-    font-size: 20px;
+    font-size: 13px;
+    margin-top: 10%;
   }
 
   .howtouse-modal h2 {
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: bold;
+    margin-top: 25px;
   }
 
   .howtouse-modal p {
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: 300;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   #close-button {
@@ -108,7 +124,8 @@
 @media only screen and (min-width: 1200px) {
   .howtouse-modal {
     position: absolute;
-    width: 60%;
+    width: 30%;
+    border-radius: 7px;
     height: 63%;
     background-color: white;
     left: 50%;
@@ -116,22 +133,29 @@
     transform: translate(-50%);
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    border: 5px solid #69c7bf;
-    padding: 10px;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2);
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 50px;
+    color: #5c5d5e;
   }
 
   .howtouse-modal h1 {
-    font-size: 20px;
+    font-size: 13px;
+    margin-top: 10%;
   }
 
   .howtouse-modal h2 {
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: bold;
+    margin-top: 25px;
   }
 
   .howtouse-modal p {
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: 300;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   #close-button {
