--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -31,7 +31,7 @@
   }
 
   .video {
-    width: 85%;
+    width: 65%;
     height: 25%;
     margin-bottom: 0px;
     margin-top: -50px;
@@ -41,14 +41,14 @@
     flex-direction: column;
     align-items: center;
     margin-top: -30px;
-    margin-bottom: 160px;
-    height: 100px;
-    justify-content: space-around;
+    margin-bottom: 70px;
+    height: 120px;
+    justify-content: space-between;
   }
 
   .signup-button {
-    width: 200px;
-    height: 50px;
+    width: 150px;
+    height: 40px;
     background: #69c7bf;
     box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
@@ -68,8 +68,8 @@
     transition: 1s;
   }
   .login-button {
-    width: 200px;
-    height: 50px;
+    width: 150px;
+    height: 40px;
     background: white;
     box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
@@ -78,10 +78,9 @@
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
-    color: #69c7bf;
     line-height: 21px;
     text-align: center;
-    color: #ffffff;
+    color: #69c7bf;
     transition: 0.5s;
   }
 
@@ -89,6 +88,7 @@
     cursor: pointer;
     background-color: #69c7bf;
     transition: 1s;
+    color: white;
   }
 
   .howtouse-button {
@@ -128,13 +128,15 @@
     transition: 1s;
   }
   .success-screen {
-    width: 50%;
-    height: 15%;
+    width: 70%;
+    height: fit-content;
     border: solid 3px #69c7bf;
-    margin-left: 50%;
+    left: 50%;
     transform: translate(-50%);
     position: absolute;
-    margin-top: 20px;
+    top: 20%;
+    border-radius: 10px;
+    padding: 20px;
     z-index: 500;
     background-color: white;
     text-align: center;
@@ -262,7 +264,7 @@
     left: 50%;
     transform: translate(-50%);
     position: absolute;
-
+    border-radius: 10px;
     z-index: 500;
     background-color: white;
     text-align: center;
@@ -270,6 +272,7 @@
   .success-screen p {
     font-size: 20px;
     margin-top: 1%;
+    color: #5c5d5e;
   }
 
   .demo-button {
